@@ -1,3 +1,8 @@
+2007-05-15  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/gplt_x11.c (image creation): Add an error check for allocation of
+	storage via XCreateImage().
+
 2007-05-14  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_set_key_title): When a key title is loaded
